# WorkflowBuddy

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .sourcery.yaml  Dockerfile  Makefile  README.md  app.py  constants.py  docker-compose.yml  fly.dev-buddy.toml  fly.template.toml  fly.toml  minimal_migrate.py  pyproject.toml  pysql.py  requirements.txt  run-dev.sh  run-prod.sh  run.sh  slack_app_manifest.template.yml  slack_app_manifest.yml  utils.py  wb-demo-manifest.yml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml
buddy/: __init__.py  actions.py  constants.py  crypto.py  db.py  errors.py  events.py  messages.py  middleware.py  shortcuts.py  sqlalchemy_ear.py  sqlite_ear.py  step_actions.py  types.py  utils.py  views.py  workflow_steps.py
demos/: app_mention_e2e_flow.md  importing-from-trigger-and-outgoing-webhooks.md
event_trigger_example_workflows/: trigger_app_mention.slackworkflow  trigger_channel_created.slackworkflow  trigger_reaction_added.slackworkflow
examples/: README.md
playground/: db_diff_and_minimal_migrate.py
scripts/: generate_secret_key.py  poetry-scripts.sh
static/: workflow-buddy-og-image.excalidraw
templates/: index.html
test_workflows/: app_mention_e_2_e_test.slackworkflow  http_testing.slackworkflow  single_webhook_test.slackworkflow  workflow_buddy_end_to_end_test_read_only-dev-app.slackworkflow  workflow_buddy_end_to_end_test_read_only.slackworkflow
tests/: README.md  conftest.py  helpers.py  tc.py  test_actions.py  test_app.py  test_crypto.py  test_db.py  test_events.py  test_messages.py  test_middleware.py  test_shortcuts.py  test_sqlalchemy_ear.py  test_sqlite_ear.py  test_step_actions.py  test_utils.py  test_views.py  test_workflow_steps.py  tools.py
(+1 files in other folders)
