[tool.poetry]
name = "workflow-buddy"
version = "0.1.0"
description = ""
authors = ["Kevin Quinn <kpquinn2@wisc.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.2.2"
slack-bolt = "^1.14.3"
requests = "^2.28.1"
python-dotenv = "^0.21.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.8.0"

[tool.pytest.ini_options]
log_cli = 1
log_cli_level = "INFO"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
