[tool.poetry]
name = "workflow-buddy"
version = "0.1.0"
description = ""
authors = ["Kevin Quinn <kpquinn2@wisc.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.2.2"
slack-bolt = "^1.15.1"
requests = "^2.28.1"
python-dotenv = "^0.21.0"
gunicorn = "^20.1.0"
jsonpath-ng = "^1.5.3"
cryptography = "^39.0.0"
SQLAlchemy = ">=1,<2" # match slack_sdk

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.8.0"
pre-commit = "^2.20.0"
pytest-cov = "^4.0.0"
mypy = "^0.991"

[tool.pytest.ini_options]
log_cli = 1
log_cli_level = "INFO"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "requests.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonpath_ng.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
